--- a/template_page.html
+++ b/template_page.html
@@ -22,16 +22,10 @@
 <body style="overflow-y: scroll;">
 
     <!-- Navbar -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Reddit</a>
             <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Item 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Item 2</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">$date$</a>
                 </li>
