--- a/template_page.html
+++ b/template_page.html
@@ -12,7 +12,7 @@
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/masonry.pkgd.min.js"></script>
-    <script src="/js/streamer.js"></script>
+    <script src="/js/main.js"></script>
 
     <!-- Needed for imgur-embed-iframe-pub -->
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
