fixed some players

--- a/template_page.html
+++ b/template_page.html
@@ -13,9 +13,8 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/masonry.pkgd.min.js"></script>
     <script src="/js/main.js"></script>
-
-    <!-- Needed for imgur-embed-iframe-pub -->
-    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <script src="/js/dash.all.min.js"></script>
+    
 
 </head>
 
