--- a/template_page.html
+++ b/template_page.html
@@ -7,18 +7,18 @@
 
     <title>Masonry images &#xB7; Bootstrap &#xB7; Infinite Scroll</title>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="/js/jquery-3.6.0.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/masonry.pkgd.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/dash.all.min.js"></script>
+    <script src="/static/js/jquery-3.6.0.min.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/masonry.pkgd.min.js"></script>
+    <script src="/static/js/main.js"></script>
+    <script src="/static/js/dash.all.min.js"></script>
     
 
 </head>
 
-<body style="overflow-y: scroll;">
+<body style="overflow-x: hidden; overflow-y: scroll;">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
